# Swarm

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
src/swarm/: __init__.py  __main__.py  analyzer.py  cli.py  communication.py  config.py  conflict.py  containers.py  cost.py  dashboard.py  discovery.py  git_sync.py  locks.py  monitor.py  notifications.py  prompt.py  roles.py  runtime.py  state.py
tests/: conftest.py  test_analyzer.py  test_communication.py  test_config.py  test_conflict.py  test_containers.py  test_cost.py  test_discovery.py  test_git_sync.py  test_locks.py  test_monitor.py  test_notifications.py  test_prompt.py  test_runtime.py  test_state.py
