[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-ai"
version = "0.1.0"
description = "Point it at any repo. It spawns parallel Claude agents that build your project autonomously."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Swarm Contributors" },
]
keywords = ["ai", "agents", "parallel", "claude", "automation", "swarm", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "docker>=7.0.0",
    "textual>=0.50.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
swarm = "swarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
